<resources>
    <string name="app_name">StarWarsTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="chipStarships">Starships</string>
    <string name="people">People</string>
    <string name="planet">Planet</string>
    <string name="diameter">Diameter</string>
    <string name="population">Population</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="passengers">Passengers</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>



</resources>